--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 spring.application.name=spring-boot-web-socket-chat-messenger
+server.port=8090
+
+
+spring.security.oauth2.client.registration.keycloak.client-id=web-messenger
+spring.security.oauth2.client.registration.keycloak.client-secret=kihPh3458iVYuWTypEdp9UkIzgkUO9NP
+spring.security.oauth2.client.registration.keycloak.scope=openid,profile,roles
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri=http://localhost:8090/login/oauth2/code/keycloak
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/web
+
+#spring.security.oauth2.client.registration.keycloak.=http://localhost:8080/realms/web/protocol/openid-connect/logout
+
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.batch.jdbc.initialize-schema=always
+spring.jpa.generate-ddl=true
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.net.shahto=DEBUG
+logging.level.org.hibernate.cache=DEBUG
